Changelog
=========

2.3.0 (unreleased)
------------------

- Move date_components_support view to Products.Archetypes.
  [davisagli]


2.2.4 (unreleased)
------------------

- Fixed ValueError in DateComponents.result() with a date before 1900. 
  [bsuttor]


2.2.3 (2013-08-13)
------------------

- Decode form data prior to inline validation.
  This fixes https://dev.plone.org/ticket/13639
  [davisagli]


2.2.2 (2013-03-05)
------------------

- Fixed TypeError in DateComponents.resault()
  [yangh]


2.2.1 (2013-01-01)
------------------

- Finish removing KSS-based inline editing support.
  [davisagli]


2.2.0 (2012-10-16)
------------------

- Switch to a non-KSS-based implementation of inline validation.
  [davisagli]


2.1.2 (2012-08-29)
------------------

- Fix handling of timezones for dates before 1970 on platforms where
  time.localtime cannot handle negative values (such as Windows).
  [mj]

2.1.1 (2012-08-04)
------------------

- Customize formlib sequencewidget in order to add originalValue attribute.
  We need it to enable form unload protection for list fields on Plone forms.
  [vipod]

2.1 (2012-05-25)
----------------

- Remove hard-coded required markers. Replaced by CSS in Plone 4.2.x.
  [smcmahon]

- Depend on zope.formlib rather than zope.app.form.
  [davisagli]

2.0.5 (2012-01-26)
------------------

- Fix the CheckBoxWidget to work properly with required fields and
  return an error that was previously squashed. Added missing unit tests
  for widget. This should also fix #11449. [rochecompaan]

2.0.4 - 2011-10-06
------------------

- Added support for readonly, addonly and removeonly to multi USW.
  Warning! Readonly is implemented in code, but addonly and removeonly is
  only done in the UI!
  [fschulze, tesdal]

- Added overrides for IPageForm and ISubPageForm as the monkeypatch
  breaks compatibility with five.formlib without restoring it in
  any other way if we don't import from plone.app.form.
  [tesdal]

2.0.3 - 2011-07-13