@@ -16,7 +16,7 @@
                          member             context/portal_membership/getAuthenticatedMember;
                          isAnon             context/@@plone_portal_state/anonymous;
                          member_editor      python: not isAnon and member.getProperty('wysiwyg_editor').lower() or '';
-                         default_editor     python: context.portal_properties.site_properties.getProperty('default_editor', '').lower();
+                         default_editor     view/default_editor;
                          editor             python: member_editor=='' and default_editor or member_editor;
                          support_path       string:nocall:here/${editor}_wysiwyg_support|here/${editor}/wysiwyg_support|here/portal_skins/plone_wysiwyg/wysiwyg_support;
                          support            python: path(support_path);">
